FDP-2954: Progress towards addressing spacing issue surrounding description portion of Event entity page.

--- a/productMods/css/individual/individual-widget-links.css
+++ b/productMods/css/individual/individual-widget-links.css
@@ -138,6 +138,16 @@
   margin-left: 16px;
 }
 
+.description-value li {
+  list-style-type: decimal;
+  margin-left: 14px;
+}
+
+.description-value ol {
+  list-style-type: decimal;
+  margin-left: 4px;
+}
+
 li {
   list-style-type: none;
 }
